[package]
name = "rust_utilities"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#wasm_guardian = {git = "https://github.com/kettle11/wasm_guardian"}
wasm_guardian = {path = "../wasm_guardian"}
flate2 = "1.0.25"
xxhash-rust = {version = "0.8.5", features = ["xxh3"]}
once_cell = "1.17.0"

[profile.release]
 # Consider these options for a smaller binary size
 # strip = true
 # panic = "abort"
 # opt-level = "z"  # Optimize for size.
 lto = true
 codegen-units = 1
